# shipwright-audio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml  render.py
.github/workflows/: ci.yml  publish.yml
examples/: music_sea_bed.py  sfx_ship_creak.py  sfx_ui_blip.py
shipwright/: __init__.py  cli.py  compose.py  config.py  dsp.py  engine.py  instruments.py  registry.py
soundfonts/: README.md
tests/: test_cli.py  test_compose.py  test_config.py  test_dsp.py  test_engine.py  test_metadata.py
