[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipwright-audio"
version = "0.1.0"
description = "A code-first audio studio: write -> render -> listen -> adjust."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Robert Braun" }]
keywords = ["audio", "synthesis", "dawdreamer", "faust", "sfx", "music", "godot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "dawdreamer",
    "numpy",
    "scipy",
    "soundfile",
]

[project.optional-dependencies]
soundfont = ["pyfluidsynth"]
midi      = ["pretty_midi"]
theory    = ["music21"]

[project.urls]
Homepage = "https://github.com/dinger086/shipwright-audio"
Repository = "https://github.com/dinger086/shipwright-audio"
Issues = "https://github.com/dinger086/shipwright-audio/issues"

[project.scripts]
shipwright = "shipwright.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["shipwright"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.DS_Store",
    "/.venv",
    "/dist",
    "/output",
    "/uv.lock",
    "**/__pycache__",
]
