[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipwright-audio"
version = "0.2.0"
description = "A code-first audio studio: write -> render -> listen -> adjust."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Robert Braun" }]
keywords = ["audio", "synthesis", "dawdreamer", "faust", "sfx", "music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "dawdreamer",
    "numpy",
    "scipy>=1.11,<1.15",
    "soundfile",
]

[project.optional-dependencies]
dev       = ["pytest"]
soundfont = ["pyfluidsynth"]
midi      = ["pretty_midi"]
theory    = ["music21"]

[project.urls]
Homepage = "https://github.com/dinger086/shipwright-audio"
Repository = "https://github.com/dinger086/shipwright-audio"
Issues = "https://github.com/dinger086/shipwright-audio/issues"
Changelog = "https://github.com/dinger086/shipwright-audio/blob/main/CHANGELOG.md"

[project.scripts]
shipwright = "shipwright.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["shipwright"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.DS_Store",
    "/.venv",
    "/dist",
    "/output",
    "/uv.lock",
    "**/__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
